--- a/BeBetterApp/WindowEinzelneKoerperteileTrainieren.xaml
+++ b/BeBetterApp/WindowEinzelneKoerperteileTrainieren.xaml
@@ -26,7 +26,7 @@
         <SolidColorBrush x:Key="color1" Color="#FFB3E5FC"/>
         <SolidColorBrush x:Key="color2" Color="#FFB2DFDB"/>
     </Window.Resources>
-    
+
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -49,7 +49,7 @@
 
 
                 <!-- Bauchmuskel -->
-                <Button Width="100" Height="120" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,367,0,0" Cursor="Hand" Background="Transparent" BorderThickness="0" Panel.ZIndex="10" Click="Button_Click">
+                <Button Width="100" HorizontalAlignment="Center" Margin="0,367,0,0" Cursor="Hand" Background="Transparent" BorderThickness="0" Panel.ZIndex="10" Click="BauchMuskel_Click" Height="120" VerticalAlignment="Top">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid>
@@ -192,7 +192,7 @@
                     </Button.Template>
                 </Button>
 
-                
+
 
 
             </Grid>
@@ -210,7 +210,7 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
-                   
+
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
