--- a/BeBetterApp/CalendarWindow.xaml
+++ b/BeBetterApp/CalendarWindow.xaml
@@ -2,13 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-        Title="Kalender" Height="600" Width="800" Background="#1B1446"
+        Title="Dein Kalender"
+        WindowStartupLocation="CenterScreen"
+        Background="#1B1B2F"
         WindowStyle="None"
-        WindowState="Maximized">
+        WindowState="Maximized"
+        AllowsTransparency="False"
+        ResizeMode="NoResize">
 
-    <Grid>
-        <syncfusion:SfScheduler x:Name="scheduler" ViewType="Month" Background="#1B1446" Foreground="White" />
+    <!-- dunkler Hintergrund -->
 
+    <Grid Margin="20">
+        <syncfusion:SfScheduler x:Name="scheduler"
+                                ViewType="Week"
+                                FontSize="14"
+                                Background="#1B1B2F"
+                                Foreground="White" />
     </Grid>
-
 </Window>
+
