--- a/BeBetterApp/MainWindow.xaml
+++ b/BeBetterApp/MainWindow.xaml
@@ -179,7 +179,7 @@
                         <Rectangle x:Name="hintergrund" Height="auto" Width="auto" Fill="#FF1F1A4E"/>
                         <Label x:Name="Label_streak" Grid.Row="0" Grid.Column="1" Content="STREAK: 0" Foreground="Gray" HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left"  VerticalContentAlignment="Center" FontSize="30" Margin="30,0,0,0" />
                         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
-                            <Border Width="auto" Height="auto" Background="AntiqueWhite" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="30,30,10,30">
+                            <Border Width="auto" Height="auto" Background="	#FF00FF" CornerRadius="20" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="30,30,10,30">
                                 <TextBlock x:Name="Textblock_challange" Text="Mach 10 Situps" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="White" />
                             </Border>
                             <Button Height="auto" Width="50" Margin="0,30,0,30" Content="✓" FontSize="20" />
