--- a/BeBetterApp/WindowSelect.xaml
+++ b/BeBetterApp/WindowSelect.xaml
@@ -12,7 +12,7 @@
         WindowState="Maximized">
 
     <Window.Resources>
-        <!-- Style wie menuButton aus MainWindow -->
+
         <Style x:Key="roundMenuButton" TargetType="Button">
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="Background" Value="Transparent"/>
@@ -56,6 +56,6 @@
                     Style="{StaticResource roundMenuButton}" Click="Button_erstellePlan"/>
         </StackPanel>
 
-        <Button Content="Zurück" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10" Width="200" Height="60" FontSize="20" Click="Button_zuruck" Style="{StaticResource roundMenuButton}"/>
+        <Button Content="Zurück" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="200" Height="60" FontSize="20" Click="Button_zuruck" Style="{StaticResource roundMenuButton}"/>
     </Grid>
 </Window>
