--- a/BeBetterApp/CalendarWindow.xaml
+++ b/BeBetterApp/CalendarWindow.xaml
@@ -10,10 +10,24 @@
         AllowsTransparency="False"
         ResizeMode="NoResize">
 
-    <!-- dunkler Hintergrund -->
-
     <Grid Margin="20">
-        <syncfusion:SfScheduler x:Name="scheduler" ViewType="Week" FontSize="14" Background="#1B1B2F" Foreground="White" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        
+        <syncfusion:SfScheduler x:Name="scheduler" ViewType="Week" FontSize="14" Background="#1B1B2F" Foreground="White" Grid.Row="0" />
+
+       
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <Button Content="Zurück" Width="100" Height="40" Grid.Column="0" Margin="10" Click="Button_Zurueck_Click" Background="#2C2C54" Foreground="White" FontWeight="Bold" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
+        </Grid>
     </Grid>
 </Window>
 
