--- a/BeBetterApp/Kaloriendazuzählen.xaml
+++ b/BeBetterApp/Kaloriendazuzählen.xaml
@@ -5,15 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeBetterApp"
         mc:Ignorable="d"
-        Title="Kaloriendazuzählen" Height="450" Width="800">
+        Title="Kaloriendazuzählen" Height="450" Width="800"
+        Background="#FF1B1446"
+        WindowStyle="None">
+
+    <Window.Resources>
+        <Style x:Key="RoundedTextBox" TargetType="TextBox">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="BorderBrush" Value="#888"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            CornerRadius="25">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
-            <RowDefinition/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <TextBox x:Name="textblock_kalorieeneingabe" Grid.Row="0" Height="50" Width="150" ></TextBox>
-            <Button x:Name="Button_eingegeben" Height="50" Width="150" Click="Button_eingegeben_Click"/>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="1" VerticalAlignment="Center"
+               Text="Notiere deine Kalorien für heute "
+               FontSize="24"
+               FontWeight="Bold"
+               Foreground="White"
+               HorizontalAlignment="Center"
+               Margin="0 0 0 20"/>
+
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBox x:Name="textblock_kalorieeneingabe"
+         Style="{StaticResource RoundedTextBox}"
+         Width="200"
+         Height="50"
+         Margin="10"/>
+
+            <Button x:Name="Button_eingegeben" Content="Berechnen" Height="50" Width="150" Click="Button_eingegeben_Click" Margin="10"/>
         </StackPanel>
 
     </Grid>
